Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131484

Fix links to QIODeviceBase::OpenMode flags

XMLWordPrintable

    • 5a6a9b1d5 (dev), 133af018d (6.8), 6b0c495b5 (dev), b166290d8 (6.8), 647bee671 (dev), 4e85a4f40 (dev), d3dad28a5 (dev), 334460407 (dev), adaf1fb10 (dev), c76b845d9 (6.9), 5d2f40a14 (6.9), eb44663ea (6.9), 604dcc714 (6.9), b70e61788 (6.9), 5661c07fe (6.8)

      In class documentation, QIODevice::Read, QIODevice::Write ... is often not linked anymore:

      This is due to Qt 6, where the flags being actually defined not in QIODevice, but QIODeviceBase. Therefore qdoc doesn't acknowledge the links anymore in 'heuristic mode' (so without an explicit \l.

      Affected documentation (most likely incomplete):

      Proposed fixes:

      Fix type name to QIODeviceBase:: and use explicit link command (\l).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: