Doc: Improve QSaveFile::open description

Force the mentioned QIODevice flags to be links.
Use fully qualified name for the first flag mentioned,
but use the short form for the following ones for
better readability.

Mark true and false to be written in code style.

Task-number: QTBUG-131484
Change-Id: I988ba66341b811c815953e5fd6d067204bdaae6c
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 5a6a9b1d5aa4a9314c09dcbc85dcc9c863ace7f5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>